I discovered a bug which caused the JavaScript code to crash if the user accessed the home page from the links in the drop-down menu as this adds the ID of that element to the URL. However, the dropdown menus did not cause the code to break once the home page was accessed from the main link as the 'if' statement had already been read. In order to fix this, I could add all of the possible URLs to the 'if' statement, including the IDs of the various sections. However, this would be redundant and would not be sustainable in the future as, if the links in the dropdown menus were changed, the URLs in the 'if' statements must also be changed. I therefore decided that the best way to overcome this bug would be to create one JS page for the code on the home page and another for the code on the other two pages, as this is most sustainable for future development.

--- a/style.css
+++ b/style.css
@@ -215,7 +215,7 @@ header {
 }
 
 .about img {
-  max-width: 500px;
+  max-width: 600px;
   max-height: 500px;
   padding: 20px;
 }
@@ -383,7 +383,6 @@ header {
 }
 
 .parent {
-  border: var(--border);
   color: var(--heading-color);
   display: flex;
   font-family: sans-serif;
@@ -449,7 +448,7 @@ footer i {
 
   .showlinks {
     display: flex;
-    padding: 5px;
+    padding: 20px 0;
   }
 
   .showcase span {
@@ -457,7 +456,7 @@ footer i {
   }
 
   .about img {
-    max-width: 70vw;
+    max-width: 80vw;
     max-height: 60vh;
   }
 
